[package]
name = "roe"
version = "0.1.0"
edition = "2021"
description = "Dual-pane TUI editor for structured data (JSON, YAML, TOML, XML)"
authors = []
license = "MIT"

[[bin]]
name = "roe"
path = "src/main.rs"

[dependencies]
# TUI rendering framework
ratatui = "0.29"

# Terminal backend + event handling
crossterm = { version = "0.28", features = ["event-stream"] }

# JSON parsing and serialization
serde_json = "1"
serde = { version = "1", features = ["derive"] }

# Additional file format support
serde_yaml = "0.9"
toml = "0.8"
roxmltree = "0.19"

# Editable text area widget
tui-textarea = { version = "0.7", features = ["crossterm"] }

# Clipboard access
arboard = "3"

# Error handling
color-eyre = "0.6"

[profile.release]
opt-level = 3
strip = true
lto = true
